# haifeng-backend

./: .env.examplefile  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  setup.cfg
backend/: __init__.py  asgi.py
backend/apps/: main.py  settings.py
backend/apps/auth/: __init__.py  acl.py  permission.py  system_privileges.py
backend/apps/core/: cache.py  errors.py  filter.py  pagination.py  session.py  sms.py
backend/apps/models/: __init__.py  business.py  goods.py  login_log.py  role_group.py  sale.py  sqlalchemy_base.py  supplier.py  user.py  user_group.py  user_role.py
backend/apps/routes/: __init__.py  auth.py  goods.py  supplier.py  user.py
backend/apps/schemas/: __init__.py  db_config.py  goods.py  item.py  login_log.py  request.py  response.py  supplier.py  user.py
backend/apps/services/: auth.py  captcha.py  goods.py  ip_location.py  login_log.py  supplier.py  user.py
backend/apps/utils/: misc.py
backend/tasks/: __init__.py  test.py
migrations/: env.py
migrations/versions/: 2017efe4901e_init.py  3aad6ec5487c_add_nullable.py  3e8a2269f871_goods_supplier.py  43a1c6438e43_init.py  49a382c8442a_supplier_activated_default.py  5e70d0f08c2e_goods_add_image.py  7afa56791c28_supplier_disable_default.py  7bbf3b8e52f9_supplier_disable_default.py  8462d8e405e1_add_nullable.py  b95d80bf49d9_init.py  c4a7ccba6334_init.py  ea3d10efa72a_init.py
