[tool.poetry]
name = "haofeng"
version = "0.0.1"
description = ""
authors = ["walden <walden@github.com>"]

[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
fastapi = "^0.85.0"
pyjwt = "^2.5.0"
alembic = "^1.8.0"
uvicorn = "^0.18.3"
gunicorn = "^20.0.4"
#sentry-sdk = "1.9.8" # 后台任务监控
bcrypt = "^4.0.0" # 加密工具
redis = {extras = ["asyncio"], version = "^4.5.4"}
captcha = "^0.4"
asyncpg = "^0.27.0"
passlib = "^1.7.4"
ormar = "^0.12.1"
python-multipart = "^0.0.6"
aiohttp = "^3.8.4"
user-agents = "^2.2.0"
psycopg2-binary = "^2.9.6"
ormar-postgres-extensions = '^2.3.0'
itsdangerous = "^2.1.2"
celery = '^5.3.0'

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
testpaths = "tests"
asyncio_mode = "auto"
addopts = '''
  --strict-markers
  --tb=short
  --cov-report=term
  --cov-report=html
  --no-cov-on-fail
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.pyright]
pythonVersion = "3.8"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
check_untyped_defs = true
disallow_untyped_defs = true # 不允许定义没有类型注释或类型注释不完整的函数
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "migrations.*",
    "tests.*",
]
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "backend.app.routes.*",
]
check_untyped_defs = true
disallow_untyped_defs = false


[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "asyncpg.*",
    "uvicorn.*",
    "captcha.*",
    "passlib.*",
    "redis.*",
    "user_agents.*",
    "ormar_postgres_extensions.*"
]
ignore_missing_imports = true # 忽略有关无法解析的导入的错误消息
